discussion/kv_engine/187371/187371_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-46740: Test demonstrating rounDcpProducer::step order for >1 stream

Test which demonstrates how a DcpProducer streams from multiple
vBuckets.  Test creates three vBuckets and adds two mutations to each
vb, then creates a DcpProducer which streams all three vBuckets.

When stepping the producer this results in all three ActiveStreams
fetching items into their readyQs, and then items are returned in
round-robin order (vb:0, vb:1, vb:2, vb:0, vb:1, ...)

Note: There's an open question if this is the ideal behavior - we end
up populating multiple readyQs with items which we don't have any way
to recover that memory aside from the consumer reading it. If the
consumer is slow to read compared to mutation rate; this can result in
a significant amount of memory being consumed by readyQs.

Change-Id: If8711df0f9e47eae9c9ee98550a6452dea599acf

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Dave Rigby
Date: 2023-02-24 14:12:33.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2023-02-24 14:26:02.000000000
Message: 
Patch Set 1: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/22783/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/dcp_stream_test.cc:1376:73: error: too few arguments to function call, expected 2, have 1 [clang-diagnostic-error]
    EXPECT_EQ(cb::engine_errc::would_block, producer->step(mockProducers));
                                                                        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/googletest.exploded/include/gtest/gtest.h:2044:69: note: expanded from macro "EXPECT_EQ"
  EXPECT_PRED_FORMAT2(::testing::internal::EqHelper::Compare, val1, val2)
                                                                    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/googletest.exploded/include/gtest/gtest_pred_impl.h:164:40: note: expanded from macro "EXPECT_PRED_FORMAT2"
  GTEST_PRED_FORMAT2_(pred_format, v1, v2, GTEST_NONFATAL_FAILURE_)
                                       ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/googletest.exploded/include/gtest/gtest_pred_impl.h:149:43: note: expanded from macro "GTEST_PRED_FORMAT2_"
  GTEST_ASSERT_(pred_format(#v1, #v2, v1, v2), \
                                          ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/googletest.exploded/include/gtest/gtest_pred_impl.h:77:52: note: expanded from macro "GTEST_ASSERT_"
  if (const ::testing::AssertionResult gtest_ar = (expression)) \
                                                   ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/dcp/producer.h:94:5: note: "step" declared here
    cb::engine_errc step(bool throttled,
    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/dcp_stream_test.cc:1388:73: error: too few arguments to function call, expected 2, have 1 [clang-diagnostic-error]
        EXPECT_EQ(cb::engine_errc::success, producer->step(mockProducers));
                                                                        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/googletest.exploded/include/gtest/gtest.h:2044:69: note: expanded from macro "EXPECT_EQ"
  EXPECT_PRED_FORMAT2(::testing::internal::EqHelper::Compare, val1, val2)
                                                                    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/googletest.exploded/include/gtest/gtest_pred_impl.h:164:40: note: expanded from macro "EXPECT_PRED_FORMAT2"
  GTEST_PRED_FORMAT2_(pred_format, v1, v2, GTEST_NONFATAL_FAILURE_)
                                       ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/googletest.exploded/include/gtest/gtest_pred_impl.h:149:43: note: expanded from macro "GTEST_PRED_FORMAT2_"
  GTEST_ASSERT_(pred_format(#v1, #v2, v1, v2), \
                                          ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/googletest.exploded/include/gtest/gtest_pred_impl.h:77:52: note: expanded from macro "GTEST_ASSERT_"
  if (const ::testing::AssertionResult gtest_ar = (expression)) \
                                                   ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/dcp/producer.h:94:5: note: "step" declared here
    cb::engine_errc step(bool throttled,
    ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/22783/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/dcp_stream_test.cc:1376:73:
error: too few arguments to function call, expected 2, have 1 [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/22783/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/22967/ : FAILURE

<p>clang-format suggested the following changes:

<pre>
cat <<"EOF" | patch -p1
diff --git a/engines/ep/tests/module_tests/dcp_stream_test.cc b/engines/ep/tests/module_tests/dcp_stream_test.cc
index c52f0f44f..f11fc1c0d 100644
--- a/engines/ep/tests/module_tests/dcp_stream_test.cc
+++ b/engines/ep/tests/module_tests/dcp_stream_test.cc
@@ -41,7 +41,6 @@
 #include &quot;../mock/mock_dcp_conn_map.h&quot;
 #include &quot;../mock/mock_dcp_consumer.h&quot;
 #include &quot;../mock/mock_dcp_producer.h&quot;
-#include &quot;../mock/gmock_dcp_msg_producers.h&quot;
 #include &quot;../mock/mock_kvstore.h&quot;
 #include &quot;../mock/mock_stream.h&quot;
 #include &quot;../mock/mock_synchronous_ep_engine.h&quot;

EOF
</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/22967/ )

https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/52216/ : FAILURE

Compile error at ..\kv_engine\engines\ep\tests\module_tests\dcp_stream_test.cc(1376): error C2660: "DcpProducer::step": function does not take 1 arguments ( https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/52216/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-debug/job/master/1570/ : FAILURE

Compile error at [2023-02-24T14:15:19.387Z] ../kv_engine/engines/ep/tests/module_tests/dcp_stream_test.cc:1376:73:
error: no matching function for call to ?MockDcpProducer::step(GMockDcpMsgProducers&)?
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-debug/job/master/1570/ )

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/12514/ : FAILURE

Compile error at [2023-02-24T14:16:43.839Z] ../kv_engine/engines/ep/tests/module_tests/dcp_stream_test.cc:1376:73:
error: too few arguments to function call, expected 2, have 1
 ( https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/12514/ )

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/12593/ : FAILURE

Compile error at [2023-02-24T14:17:47.426Z] ../kv_engine/engines/ep/tests/module_tests/dcp_stream_test.cc:1376:73:
error: no matching function for call to ?MockDcpProducer::step(GMockDcpMsgProducers&)?
 ( https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/12593/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/24843/ : FAILURE

Compile error at [2023-02-24T14:17:07.738Z] ../kv_engine/engines/ep/tests/module_tests/dcp_stream_test.cc:1376:73:
error: no matching function for call to ?MockDcpProducer::step(GMockDcpMsgProducers&)?
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/24843/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/25293/ : FAILURE

Compile error at [2023-02-24T14:19:48.695Z] ../kv_engine/engines/ep/tests/module_tests/dcp_stream_test.cc:1376:73:
error: no matching function for call to ?MockDcpProducer::step(GMockDcpMsgProducers&)?
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/25293/ )

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/26150/ : FAILURE

Compile error at [2023-02-24T14:17:37.465Z] ../kv_engine/engines/ep/tests/module_tests/dcp_stream_test.cc:1376:73:
error: too few arguments to function call, expected 2, have 1
 ( https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/26150/ )

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/24406/ : FAILURE

Compile error at [2023-02-24T14:20:42.915Z] ../kv_engine/engines/ep/tests/module_tests/dcp_stream_test.cc:1376:73:
error: too few arguments to function call, expected 2, have 1
 ( https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/24406/ )

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/33259/ : FAILURE

Compile error at [2023-02-24T14:20:13.819Z] ../kv_engine/engines/ep/tests/module_tests/dcp_stream_test.cc:1376:73:
error: too few arguments to function call, expected 2, have 1
 ( https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/33259/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/43801/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
